--- a/main.css
+++ b/main.css
@@ -4,12 +4,12 @@
     box-sizing: border-box;
 }
 body,input,textarea{
-    font-family: "Roboto", sans-serif;
+    font-family:"Nunito", sans-serif; 
     font-style: normal;
 }
 
 header , section h2,section h3{
-    font-family: "Bungee", sans-serif;
+    font-family: "Abril Fatface", serif;
     font-weight: 400;
     font-style: normal;
 }
